# pydash

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
docs/: THEMING_PLAN.md  breadcrumbs.md  ci-flakiness.md  design.md  gallery.md  layout_index.md  navbar.md  server_helpers.md  sidebar.md  themes.md  usage.md
examples/: _bootswatch.py  mvp_app.py  mvp_shiny.py  mvp_shiny_from_bslib.py  mvp_shiny_themed.py  mvp_shiny_themes_showcase.py
scripts/: analyze_hars.py  capture_gallery_screenshots.py  check_shiny_import.py  inspect_dom.py  inspect_line.py  list_vendored_bootswatch.py  pyyaml_check.py  pyyaml_diagnostic.py  vendor_assets.py  vendor_axe.py
tests/: conftest.py  test_bootswatch.py  test_brand_controlbar.py  test_controlbar_asset.py  test_controlbar_server.py  test_core_layout.py  test_dashboard_page.py  test_examples_assets.py  test_examples_playwright_smoke.py  test_gallery_thumbnail.py  test_imports.py  test_packaging_assets.py  test_playwright_stubs.py  test_playwright_stubs_adminlte.py  test_playwright_stubs_bootswatch.py  test_release_changelog.py  test_release_tags.py  test_server_navbar_helpers.py  test_server_updates.py  test_shiny_badges.py  test_shiny_components.py  test_shiny_imports.py  test_shiny_layout_additional.py  test_shiny_layout_extras.py  test_shiny_layout_import.py  test_styles_tokens.py  test_theme.py  test_theme_admin_assets.py  test_theme_assets.py  test_theme_import.py  test_theme_tokens.py  test_vendor_assets.py  test_visual_active_sidebar.py  test_visual_bootswatch_vendored.py  test_visual_controlbar.py  test_visual_footer.py  test_visual_from_bslib.py  test_visual_layout_smoke.py  test_visual_navbar_updates.py  test_visual_sidebar.py  (+4 more)
(+45 files in other folders)
