[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bs4dash-py"
version = "0.1.0"
description = "MVP: AdminLTE3-like dashboard helpers for Shiny for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["dash>=2.6.0"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "black==25.12.0",
  "ruff==0.14.10",
  "isort==7.0.0",
  "flake8",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bs4dash_py" = ["assets/*.js"]
